feature(controllers): Updated all controllers with new models and endpoints